--- a/assets/global.scss
+++ b/assets/global.scss
@@ -39,3 +39,12 @@ img {
   display: block !important;
   visibility: visible !important;
 }
+
+@media (prefers-color-scheme: dark) {
+  html {
+    filter: invert(94%) hue-rotate(180deg);
+  }
+  img {
+    filter: invert(94%) hue-rotate(180deg);
+  }
+}
